--- a/package.json
+++ b/package.json
@@ -42,40 +42,40 @@
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1000.0",
+    "@angular-devkit/build-angular": "^0.1000.8",
     "@angular/cli": "~10.0.5",
     "@angular/compiler": "~10.0.0",
     "@angular/compiler-cli": "~10.0.0",
     "@angular/language-service": "~10.0.0",
     "@ionic/angular-toolkit": "^2.3.0",
-    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/jest": "26.0.10",
+    "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
+    "generator-jhipster": "6.10.1",
+    "generator-jhipster-ionic": "6.0.0",
+    "html-loader": "1.1.0",
+    "ionic-mocks-jest": "1.3.3",
+    "istanbul-instrumenter-loader": "3.0.1",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
+    "jest": "26.4.0",
+    "jest-localstorage-mock": "2.4.3",
+    "jest-preset-angular": "8.2.1",
     "karma": "~5.0.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~3.3.0",
     "karma-jasmine-html-reporter": "^1.5.0",
-    "protractor": "~7.0.0",
-    "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
-    "typescript": "~3.9.5",
-    "generator-jhipster": "6.10.1",
-    "@types/jest": "26.0.10",
-    "html-loader": "1.1.0",
-    "ionic-mocks-jest": "1.3.3",
-    "istanbul-instrumenter-loader": "3.0.1",
-    "jest": "26.4.0",
-    "jest-localstorage-mock": "2.4.3",
-    "jest-preset-angular": "8.2.1",
     "null-loader": "4.0.0",
     "prettier": "2.0.5",
+    "protractor": "~7.0.0",
     "ts-loader": "8.0.2",
+    "ts-node": "~8.3.0",
+    "tslint": "~6.1.0",
     "tslint-config-prettier": "1.18.0",
-    "generator-jhipster-ionic": "6.0.0"
+    "typescript": "~3.9.5"
   },
   "cordova": {
     "plugins": {
