--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@ngx-translate/core": "13.0.0",
     "@ngx-translate/http-loader": "6.0.0",
     "ng-jhipster": "0.14.0",
+    "ngx-clipboard": "^14.0.1",
     "ngx-webstorage": "6.0.0",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
