--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "ng-jhipster": "0.14.0",
     "ngx-clipboard": "^14.0.1",
     "ngx-webstorage": "6.0.0",
+    "primeicons": "^4.1.0",
+    "primeng": "^11.2.0",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
