--- a/package.json
+++ b/package.json
@@ -29,12 +29,15 @@
     "@fortawesome/free-solid-svg-icons": "5.14.0",
     "@ionic-native/camera": "5.28.0",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/geolocation": "^5.31.1",
+    "@ionic-native/google-maps": "^5.5.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
     "@ng-bootstrap/ng-bootstrap": "7.0.0",
     "@ngx-translate/core": "13.0.0",
     "@ngx-translate/http-loader": "6.0.0",
+    "cordova-browser": "6.0.0",
     "ng-jhipster": "0.14.0",
     "ngx-clipboard": "^14.0.1",
     "ngx-webstorage": "6.0.0",
@@ -56,6 +59,9 @@
     "@types/jest": "26.0.10",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
+    "cordova-plugin-compat": "^1.2.0",
+    "cordova-plugin-geolocation": "^2.4.3",
+    "cordova-plugin-googlemaps": "^2.7.1",
     "generator-jhipster": "6.10.1",
     "generator-jhipster-ionic": "6.0.0",
     "html-loader": "1.1.0",
@@ -78,15 +84,30 @@
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "tslint-config-prettier": "1.18.0",
-    "typescript": "~3.9.5"
+    "typescript": "~3.9.5",
+    "cordova-plugin-whitelist": "1.3.3",
+    "cordova-plugin-statusbar": "2.4.2",
+    "cordova-plugin-device": "2.0.2",
+    "cordova-plugin-splashscreen": "5.0.2",
+    "cordova-plugin-ionic-webview": "^4.0.0",
+    "cordova-plugin-ionic-keyboard": "^2.0.5"
   },
   "cordova": {
     "plugins": {
       "cordova-plugin-camera": {
         "CAMERA_USAGE_DESCRIPTION": "Need camera access to take pictures",
         "PHOTOLIBRARY_USAGE_DESCRIPTION": "Need photo library access to get pictures from there"
-      }
-    }
+      },
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-ionic-keyboard": {}
+    },
+    "platforms": [
+      "browser"
+    ]
   },
   "jest": {
     "preset": "jest-preset-angular",
